--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# Vultr 서버 설정
+# Vultr Server Settings
 VITE_VULTR_SERVER_IP=placeholder
 VITE_VULTR_SERVER_PORT=placeholder
 # VITE_VULTR_SERVER_URL=placeholder
 
-# 개발용 로컬 서버
+# Local Server for Development
 VITE_VULTR_SERVER_URL=placeholder
 
-# 환경 설정
+# Environment Settings
 VITE_ENV=development
